chore: frontend deployment setup

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "AllowedOrigins": [
+    "http://localhost:5173",
+    "http://localhost:3000"
+  ],
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=projectmanager.db"
   },
